--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
     </section>
 
     <!-- Переваги -->
-
-    <div class="container">
-      <section class="section">
+    <section class="section">
+      <div class="container">
         <ul class="features list">
           <li class="features-item">
             <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -83,11 +82,11 @@
             </p>
           </li>
         </ul>
-      </section>
-    </div>
+      </div>
+    </section>
     <!-- Чим ми займаємось -->
-    <div class="container">
-      <section class="section no-padding">
+    <section class="section no-padding">
+      <div class="container">
         <h2 class="section-title work">Чим ми займаємося</h2>
         <ul class="list example">
           <li>
@@ -100,8 +99,8 @@
             <img src="./images/example-3.jpg" alt="Дизайн" width="370" height="294" />
           </li>
         </ul>
-      </section>
-    </div>
+      </div>
+    </section>
     <!-- Наша команда -->
     <section class="section team-section">
       <div class="container">
@@ -109,23 +108,31 @@
         <ul class="team-list list">
           <li>
             <img src="./images/pd.jpg" alt="Продакт дизайнер" width="270" />
-            <h3 class="team-title">Ігор Дем'яненко</h3>
-            <p class="team-text">Product Designer</p>
+            <div class="team-description">
+              <h3 class="team-title">Ігор Дем'яненко</h3>
+              <p class="team-text">Product Designer</p>
+            </div>
           </li>
           <li>
             <img src="./images/fd.jpg" alt="Фронтенд девелопер" width="270" />
-            <h3 class="team-title">Ольга Рєпіна</h3>
-            <p class="team-text">Frontend Developer</p>
+            <div class="team-description">
+              <h3 class="team-title">Ольга Рєпіна</h3>
+              <p class="team-text">Frontend Developer</p>
+            </div>
           </li>
           <li>
             <img src="./images/m.jpg" alt="Маркетинг" width="270" />
-            <h3 class="team-title">Микола Тарасов</h3>
-            <p class="team-text">Marketing</p>
+            <div class="team-description">
+              <h3 class="team-title">Микола Тарасов</h3>
+              <p class="team-text">Marketing</p>
+            </div>
           </li>
           <li>
             <img src="./images/uid.jpg" alt="Графічний дизайнер" width="270" />
-            <h3 class="team-title">Михайло Єрмаков</h3>
-            <p class="team-text">UI Designer</p>
+            <div class="team-description">
+              <h3 class="team-title">Михайло Єрмаков</h3>
+              <p class="team-text">UI Designer</p>
+            </div>
           </li>
         </ul>
       </div>
@@ -133,7 +140,7 @@
   </main>
   <!-- Футер -->
   <footer class="footer">
-    <div class="footer-container container">
+    <div class="container">
       <div class="footer-logo">
         <a href="./index.html" class="logo">Web<span class="footer-accent">Studio</span></a>
       </div>
